// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HistoricalTrends non-ideal-states Can handle bad start and end times 1`] = `
<div>
  <div
    class="bp4-non-ideal-state"
  >
    <div
      class="bp4-non-ideal-state-visual"
    >
      <span
        aria-hidden="true"
        class="bp4-icon bp4-icon-error"
        icon="error"
        tabindex="-1"
      >
        <svg
          data-icon="error"
          height="60"
          viewBox="0 0 20 20"
          width="60"
        >
          <path
            d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 16H9v-2h2v2zm0-3H9V4h2v9z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <h4
      class="bp4-heading"
    >
      Error
    </h4>
    <div>
      Invalid start and end times
    </div>
  </div>
</div>
`;

exports[`HistoricalTrends non-ideal-states Can return error 1`] = `
<div>
  <div
    class="bp4-non-ideal-state"
  >
    <h4
      class="bp4-heading"
    >
      Error
    </h4>
    <div>
      Error querying for Lag data
    </div>
  </div>
</div>
`;

exports[`HistoricalTrends non-ideal-states Can return undefined 1`] = `
<div>
  <div
    class="bp4-non-ideal-state"
  >
    <h4
      class="bp4-heading"
    >
      No Data
    </h4>
    <div>
      No historical Lag data
    </div>
  </div>
</div>
`;

exports[`HistoricalTrends non-ideal-states is loading 1`] = `
<div>
  <div
    class="bp4-non-ideal-state"
  >
    <h4
      class="bp4-heading"
    >
      Loading
    </h4>
    <div>
      Historical Lag data
    </div>
    <div
      class="bp4-spinner bp4-intent-primary"
      role="progressbar"
    >
      <div
        class="bp4-spinner-animation"
      >
        <svg
          height="50"
          stroke-width="8.00"
          viewBox="1.00 1.00 98.00 98.00"
          width="50"
        >
          <path
            class="bp4-spinner-track"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
          />
          <path
            class="bp4-spinner-head"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
            pathLength="280"
            stroke-dasharray="280 280"
            stroke-dashoffset="210"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`HistoricalTrends non-ideal-states is not loading with no data 01 1`] = `
<div>
  <div
    class="bp4-non-ideal-state"
  >
    <h4
      class="bp4-heading"
    >
      Loading
    </h4>
    <div>
      Historical Lag data
    </div>
    <div
      class="bp4-spinner bp4-intent-primary"
      role="progressbar"
    >
      <div
        class="bp4-spinner-animation"
      >
        <svg
          height="50"
          stroke-width="8.00"
          viewBox="1.00 1.00 98.00 98.00"
          width="50"
        >
          <path
            class="bp4-spinner-track"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
          />
          <path
            class="bp4-spinner-head"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
            pathLength="280"
            stroke-dasharray="280 280"
            stroke-dashoffset="210"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`HistoricalTrends non-ideal-states is not loading with no data 02 1`] = `
<div>
  <div
    class="bp4-non-ideal-state"
  >
    <h4
      class="bp4-heading"
    >
      Loading
    </h4>
    <div>
      Historical Lag data
    </div>
    <div
      class="bp4-spinner bp4-intent-primary"
      role="progressbar"
    >
      <div
        class="bp4-spinner-animation"
      >
        <svg
          height="50"
          stroke-width="8.00"
          viewBox="1.00 1.00 98.00 98.00"
          width="50"
        >
          <path
            class="bp4-spinner-track"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
          />
          <path
            class="bp4-spinner-head"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
            pathLength="280"
            stroke-dasharray="280 280"
            stroke-dashoffset="210"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`HistoricalTrends non-ideal-states is not loading with undefined data 1`] = `
<div>
  <div
    class="bp4-non-ideal-state"
  >
    <h4
      class="bp4-heading"
    >
      No Data
    </h4>
    <div>
      No historical Lag data
    </div>
  </div>
</div>
`;
